<resources>
    <string name="app_name">Portfolio</string>
    <string name="file_provider_authority" translatable="false">com.skichrome.portfolio.fileprovider</string>
    <string name="profile_fragment_no_app_take_picture_intent">Your app doesn\'t have a file manager installed</string>

    <!-- Navigation -->
    <string name="navigation_fragment_title_home">Home</string>
    <string name="navigation_fragment_title_profile">Profile</string>
    <string name="navigation_fragment_title_themes_list">Themes</string>
    <string name="navigation_fragment_title_category_list">Categories</string>
    <string name="navigation_fragment_title_project_list">Projects</string>
    <string name="navigation_fragment_title_new_project_form">New Project</string>
    <string name="navigation_fragment_title_new_category_form">New Category</string>
    <string name="navigation_fragment_title_new_theme_form">New theme</string>
    <string name="navigation_fragment_title_edit_project_form">Edit Project</string>
    <string name="navigation_fragment_title_edit_category_form">Edit Category</string>
    <string name="navigation_fragment_title_edit_theme_form">Edit theme</string>

    <!-- Menu -->
    <string name="menu_item_new_paragraph">New paragraph</string>
    <string name="menu_item_logout">Logout</string>

    <!-- Home -->
    <string name="home_view_model_user_fetch_success">Successfully fetched user info</string>
    <string name="home_view_model_user_fetch_error">An error occurred when fetching user info</string>
    <string name="home_fragment_profile_picture_content_desc">profile picture</string>
    <string name="home_fragment_profile_btn">Profile</string>
    <string name="home_fragment_project_btn">Projects</string>

    <!-- Profile -->
    <string name="profile_fragment_title">User information</string>
    <string name="profile_fragment_btn_update_img_picker">Select picture</string>
    <string name="profile_fragment_btn_update_img_camera">Take picture</string>
    <string name="profile_fragment_hint_last_name">Last Name</string>
    <string name="profile_fragment_hint_first_name">First Name</string>
    <string name="profile_fragment_hint_email">Email</string>
    <string name="profile_fragment_hint_phone">Phone Number</string>
    <string name="profile_fragment_hint_summary">Summary</string>
    <string name="edit_profile_fragment_required_field_msg">Required field</string>
    <string name="edit_profile_fragment_required_field_msg_no_picture_set">Please add an image to the profile</string>
    <string name="edit_profile_fragment_required_field_msg_snack_bar">Please fill all required field</string>

    <!-- Theme -->
    <string name="themes_fragment_themes_fetch_success">Successfully fetched themes</string>
    <string name="themes_fragment_themes_fetch_error">An error occurred when fetching all themes</string>
    <string name="rv_item_fragment_themes_img_content_desc">Theme picture</string>

    <!-- Category -->
    <string name="categories_fragment_themes_fetch_success">Successfully fetched categories</string>
    <string name="categories_fragment_themes_fetch_error">An error occurred when fetching all categories</string>
    <string name="rv_item_fragment_categories_img_content_desc">Category picture</string>

    <!-- Project -->
    <string name="categories_fragment_projects_fetch_success">Successfully fetched projects</string>
    <string name="categories_fragment_projects_fetch_error">An error occurred when fetching all projects</string>
    <string name="categories_fragment_projects_img_content_desc">Project main picture</string>

    <!-- Add Edit Project -->
    <string name="add_edit_project_view_model_project_fetch_error">An error occurred when fetching this project</string>
    <string name="add_edit_project_view_model_project_insert_error">An error occurred when saving this project</string>
    <string name="add_edit_project_view_model_project_upload_img_error">An error occurred when uploading project image</string>
    <string name="add_edit_project_view_model_project_upload_img_content_error">An error occurred when uploading content image</string>
    <string name="add_edit_project_view_model_project_insert_no_project_to_save">No project to save</string>
    <string name="add_edit_project_fragment_title">Identification</string>
    <string name="add_edit_project_fragment_title_hint">Project title</string>
    <string name="add_edit_project_fragment_description_hint">Project description</string>
    <string name="add_edit_project_fragment_img_content_desc">Project main picture</string>
    <string name="add_edit_project_fragment_img_alt_hint">Project image alt</string>
    <string name="add_edit_project_fragment_created_hint">Creation date</string>
    <string name="add_edit_project_fragment_btn_set_img">Set</string>
    <string name="add_edit_project_fragment_required_field_msg">Required field</string>
    <string name="add_edit_project_fragment_required_field_msg_no_picture_set">Please add an image</string>
    <string name="add_edit_project_fragment_required_field_msg_snack_bar">Please fill all required field</string>
    <string name="add_edit_project_fragment_post_content_title">Post content</string>
    <string name="add_edit_project_fragment_alert_dialog_title">Project picture</string>
    <string name="add_edit_project_fragment_alert_dialog_content">Do you want to take a new picture or import picture from storage ?</string>
    <string name="add_edit_project_fragment_alert_dialog_positive_btn">Storage</string>
    <string name="add_edit_project_fragment_alert_dialog_neutral_btn">Camera</string>
    <string name="add_edit_project_fragment_alert_dialog_negative_btn">Cancel</string>
    <string name="rv_item_add_edit_fragment_paragraph_content_title_hint">Post title</string>
    <string name="rv_item_add_edit_fragment_paragraph_content_hint">Post content</string>

    <!-- Add Edit Category -->
    <string name="add_edit_category_fragment_main_title">Content</string>
    <string name="add_edit_category_fragment_image_title">Image</string>
    <string name="add_edit_category_fragment_category_name_hint">Category title</string>
    <string name="add_edit_category_fragment_category_content_hint">Category content</string>
    <string name="add_edit_category_fragment_category_img_content_desc">Insert new category image</string>
    <string name="add_edit_category_fragment_category_img_alt_hint">Category image alt</string>
    <string name="add_edit_category_view_model_category_fetch_error">An error occurred when fetching this category</string>
    <string name="add_edit_category_view_model_category_upload_img_error">An error occurred when uploading this category image</string>
    <string name="add_edit_category_view_model_category_insert_error">An error occurred when saving this category</string>
    <string name="add_edit_category_fragment_required_field_msg">Required field</string>
    <string name="add_edit_category_fragment_required_field_msg_no_picture_set">Please add an image to this category</string>
    <string name="add_edit_category_fragment_required_field_msg_snack_bar">Please fill all required field</string>

    <!-- Add Edit Theme -->
    <string name="add_edit_theme_view_model_theme_fetch_error">An error occurred when fetching this theme</string>
    <string name="add_edit_theme_view_model_theme_upload_img_error">An error occurred when uploading this theme image</string>
    <string name="add_edit_theme_view_model_theme_insert_error">An error occurred when saving this theme</string>
    <string name="add_edit_theme_fragment_required_field_msg">Required field</string>
    <string name="add_edit_theme_fragment_required_field_msg_no_picture_set">Please add an image to this theme</string>
    <string name="add_edit_theme_fragment_required_field_msg_snack_bar">Please fill all required field</string>
    <string name="add_edit_theme_fragment_content_title">Content</string>
    <string name="add_edit_theme_fragment_name_hint">Theme name</string>
    <string name="add_edit_theme_fragment_description_hint">Theme description</string>
    <string name="add_edit_theme_fragment_img_content_desc">Add a theme image</string>
    <string name="add_edit_theme_fragment_img_alt_hint">Theme image alt</string>
</resources>
